[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashgs-unofficial"
version = "0.2.0"
description = "Unofficial PyTorch reproduction for FlashGS: Efficient 3D Gaussian Splatting for Large-scale and High-resolution Rendering."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Minghao Liu" }]
dependencies = [
  "torch>=2.1",
  "torchvision>=0.16",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "numpy>=1.24"
]

[tool.setuptools.packages.find]
where = ["src"]
